# HEIG_Multi_ClAudio_2.0

./: README.md
ESP32/Arduino/: prototype_sketch.ino
ESP32/ESP-IDF/a2dp_source/: sdkconfig  sdkconfig.old
ESP32/ESP-IDF/a2dp_source/main/: CMakeLists.txt  main.c  main.txt
Nordic/bap_unicast_client/: CMakeLists.txt  prj.conf
Nordic/bap_unicast_client/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
Nordic/bap_unicast_client/src/: app_state.c  app_state.h  main_3.c  stream_lc3.c  stream_lc3.h  stream_mic.h  stream_pdm.c  stream_tx.c  stream_tx.h
Nordic/bap_unicast_client/sysbuild/: hci_ipc.conf
